--- a/Nsiclass.Client/Areas/Admin/Views/Relations/_RelationItemModalPartial.cshtml
+++ b/Nsiclass.Client/Areas/Admin/Views/Relations/_RelationItemModalPartial.cshtml
@@ -26,8 +26,8 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" data-save="modal">Save</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Отказ</button>
+                <button type="button" class="btn btn-primary" data-save="modal">Запис</button>
             </div>
         </div>
     </div>
