--- a/Nsiclass.Client/Areas/Admin/Views/Class/SelectVersion.cshtml
+++ b/Nsiclass.Client/Areas/Admin/Views/Class/SelectVersion.cshtml
@@ -10,6 +10,9 @@
 
 <form method="post" enctype="multipart/form-data">
     <div class="row">
+        <div class="col-md-2">
+
+        </div>
         <div class="col-md-4">
             <input name="classCode" value="@Model.ClassCode" class="hidden" />
             <label style="color:azure;" asp-for="@Model.VersionCodes">Избор на версия:</label>
@@ -30,20 +33,26 @@
             </div>
 
         </div>
-        <div class="col-md-4">
+        <div class="col-md-2">
+
+        </div>
+        @*<div class="col-md-4">
             <input type="file" name="newItems" style="display:none" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel" id="fileSelected" onchange="checkfile(this);" />
             <button type="button" class="button search" onclick="document.getElementsByName('newItems')[0].click()">Избор на файл с елементи</button>
             <br />
             <button type="button" class="button save" id="send">Зареждане</button>
             <br />
             <a class="button btncansel" asp-controller="Users" asp-action="AdminTasks">Отказ</a>
-
-            @*<h4 class="center-block text-center" style="color:azure;">Избрана класификация : @Model.ClassCode</h4>*@
+        </div>*@
+    </div>
+    <div class="row" style="margin-top:15px;">
+        <div class="center-block text-center">
+            <input type="file" name="newItems" style="display:none" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel" id="fileSelected" onchange="checkfile(this);" />
+            <button type="button" class="button search" style="min-height:150" onclick="document.getElementsByName('newItems')[0].click()">Избор на файл с елементи</button>
+            <button type="button" class="button save" id="send">Зареждане</button>
+            <a class="button btncansel" asp-controller="Users" asp-action="AdminTasks">Отказ</a>
         </div>
     </div>
-        <div class="center-block text-center">
- 
-        </div>
         <input type="submit" class="btn button-invisible" value="REALSENDSEND" id="realsend" />
     
 </form>
