--- a/Nsiclass.Client/Areas/Admin/Views/Class/SelectVersion.cshtml
+++ b/Nsiclass.Client/Areas/Admin/Views/Class/SelectVersion.cshtml
@@ -48,10 +48,14 @@
     <div class="row" style="margin-top:15px;">
         <div class="center-block text-center">
             <input type="file" name="newItems" style="display:none" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel" id="fileSelected" onchange="checkfile(this);" />
-            <button type="button" class="button search" style="min-height:150" onclick="document.getElementsByName('newItems')[0].click()">Избор на файл с елементи</button>
+            <button type="button" class="button search" onclick="document.getElementsByName('newItems')[0].click()">Избор на файл с елементи</button>
             <button type="button" class="button save" id="send">Зареждане</button>
-            <a class="button btncansel" asp-controller="Users" asp-action="AdminTasks">Отказ</a>
+            <a class="button btncansel" asp-controller="Users" asp-action="AdminTasks">Отказ</a>  
+            <button type="button" class="button search" id="help">Помощ</button>
         </div>
+    </div>
+    <div class="row">
+        <img src="~/jpg/ItemsExample.jpg" alt="example" style="padding:40px;">
     </div>
         <input type="submit" class="btn button-invisible" value="REALSENDSEND" id="realsend" />
     
