--- a/Nsiclass.Client/Areas/Admin/Views/Class/ClassDetails.cshtml
+++ b/Nsiclass.Client/Areas/Admin/Views/Class/ClassDetails.cshtml
@@ -131,7 +131,10 @@
         {
             <a class="button btnrestore" style="text-decoration: none;" data-toggle="modal" data-target="#@Model.Id">Активиране &#33;&#33;&#33;</a>
         }
-
+        @if (User.IsInRole(DataConstants.DeveloperRole))
+        {
+            <a class="button btndelete" style="text-decoration: none;" data-toggle="modal" data-target="#totalDeleteClassification">Тотално изтриване &#33;&#33;&#33;</a>
+        }
 
     </div>
     <input type="submit" class="btn button-invisible" value="REALSENDSEND" id="realsend" />
@@ -176,6 +179,24 @@ else
 
     </form>
 }
+
+<form method="post" asp-controller="Class" asp-action="TotalDestroyClass" asp-route-classId="@Model.Id">
+
+    <div class="modal fade" id="totalDeleteClassification" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div style="background-color:papayawhip;" class="modal-content">
+                <div class="modal-body">
+                    <h4>Сигурни ли сте, че искате тотално да изтриете класификация <span style="font-weight:700">@Model.Id</span></h4>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Отказ</button>
+                    <button type="submit" class="btn btn-danger">Потвърди</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</form>
 
 <script src="~/js/classDetails.js"></script>
 @section Scripts {
